--- a/README
+++ b/README
@@ -3,4 +3,4 @@ This is the working directory for the OpenDSA project.
 Modules: The source directory for .mod files
 
 To check this out:
-  git clone git:github.com/cashaffer/OpenDSA.git OpenDSA
+  git clone git://github.com/cashaffer/OpenDSA.git OpenDSA
