--- a/README
+++ b/README
@@ -2,5 +2,7 @@ This is the working directory for the OpenDSA project.
 
 Modules: The source directory for .mod files
 
-To check this out:
+Doc: Documentation. Currently contains the preprocessor spec.
+
+To check this repository out:
   git clone git://github.com/cashaffer/OpenDSA.git OpenDSA
