--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -261,6 +261,13 @@ address={Vancouver},
 month={November},
 }
 
+@misc{GallesWebsite,
+author = "D. Galles",
+title = {Data Structure Visualizations Website},
+howpublished = {\url{http://www.cs.usfca.edu/~galles/visualization/Algorithms.html}},
+year = 2012,
+}
+
 @misc{IXL,
 key="IXL",
 title={{IXL} Website},
@@ -1103,6 +1110,15 @@ pages = {129--134},
  xpublisher = {ACM},
  xaddress = {New York, NY, USA},
  keywords = {animation, hypertextbooks, pedagogy, visualization},
+}
+
+@book{Diehl02,
+author = {S. Diehl},
+booktitle = {Software Visualization},
+series = {Lecture Notes in Computer Science},
+publisher = {Springer},
+year = 2002,
+number = 2269,
 }
 
 @incollection{Ross02ebooks,
