Added bibentry Karavirta:SpatialJSAV

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1197,3 +1197,10 @@ number = 2269,
   isbn = {1-59593-024-8},
   location = {Caparica, Portugal}
 }
+
+@inproceedings{Karavirta:SpatialJSAV,
+  author = {Ville Karavirta},
+  title = {Location-aware Mobile Learning Of Spatial Algorithms},
+  booktitle = {IADIS International Conference on Mobile Learning 2013},
+  year = {To Appear}
+}
