Unifying style in bibliography

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1,5 +1,5 @@
 @ARTICLE{Karavirta:JSXaal,
-  author = {Ville Karavirta},
+  author = {V. Karavirta},
   title = {Seamless Merging of Hypertext and Algorithm Animation},
   journal = {ACM Transactions on Computing Education (TOCE)},
   year = {2009},
@@ -69,7 +69,7 @@ month = {Oct-Dec},
 }
 
 @ARTICLE{AnimalJVLC,
-  author = {Guido R\"o\ss{}ling and Bernd Freisleben},
+  author = {G. R\"o\ss{}ling and B. Freisleben},
   title = {{ANIMAL}: A System for Supporting Multiple Roles in Algorithm Animation},
   journal = {Journal of Visual Languages and Computing},
   year = {2002},
@@ -1114,7 +1114,7 @@ pages = {129--134},
 
 @book{Diehl02,
 author = {S. Diehl},
-booktitle = {Software Visualization},
+title = {Software Visualization},
 series = {Lecture Notes in Computer Science},
 publisher = {Springer},
 year = 2002,
@@ -1184,10 +1184,10 @@ number = 2269,
  }
 
 @INPROCEEDINGS{Krebs:MAUDA,
-  author = {Markus Krebs and Tobias Lauer and Thomas Ottmann and Stephan Trahasch},
+  author = {M. Krebs and T. Lauer and T. Ottmann and S. Trahasch},
   title = {Student-built algorithm visualizations for assessment: flexible generation,
   feedback and grading},
-  booktitle = {ITiCSE '05: Proceedings of the 10th annual SIGCSE conference on Innovation
+  booktitle = {Proceedings of the 10th annual SIGCSE conference on Innovation
   and technology in computer science education},
   year = {2005},
   pages = {281--285},
@@ -1199,7 +1199,7 @@ number = 2269,
 }
 
 @inproceedings{Karavirta:SpatialJSAV,
-  author = {Ville Karavirta},
+  author = {V. Karavirta},
   title = {Location-aware Mobile Learning Of Spatial Algorithms},
   booktitle = {IADIS International Conference on Mobile Learning 2013},
   year = {To Appear}
