--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1,7 +1,8 @@
 @inproceedings{Hall13,
- author = {S. Hall and E. Fouh and D. Breakiron and M. Elshehaly and C.A. Shaffer},
- title = "Education Innovation for Data Structures and Algorithms Courses},
- booktitle = {to appear in Proceedings of ASEE Annual Conference},
+ author = {S. Hall and E. Fouh and D. Breakiron and M. Elshehaly and C.A. Shaffer
+},
+ title = {Education Innovation for Data Structures and Algorithms Courses},
+ booktitle = {Proceedings of ASEE Annual Conference},
  address = {Atlanta GA},
  month = {June},
  year = 2013,
