Update library link in graphDFS.html

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -8,6 +8,15 @@
  year = 2013,
 }
 
+@inproceedings{Karavirta:ITiCSE13,
+ author = {V. Karavirta and C.A. Shaffer},
+ title = {JSAV: JavaScript Algorithm Visualization Library}
+ booktitle = {Proceedings of the 18th Annual Conference on Innovation and Technology in Computer Science Education (ITiCSE 2013)},
+ address = {Canterbury, UK},
+ month = {July},
+ year = 2013,
+}
+
 @ARTICLE{Karavirta:JSXaal,
   author = {V. Karavirta},
   title = {Seamless Merging of Hypertext and Algorithm Animation},
