Added Karavirta:JSAVHeaps entry to bib

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -10,7 +10,7 @@
 
 @inproceedings{Karavirta:ITiCSE13,
  author = {V. Karavirta and C.A. Shaffer},
- title = {JSAV: JavaScript Algorithm Visualization Library}
+ title = {JSAV: The JavaScript Algorithm Visualization Library},
  booktitle = {Proceedings of the 18th Annual Conference on Innovation and Technology in Computer Science Education (ITiCSE 2013)},
  address = {Canterbury, UK},
  month = {July},
@@ -29,6 +29,14 @@
   csgroup = {SVG,XAAL,AAFAS,COMPSER},
   publisher = {ACM},
   url = {http://doi.acm.org/10.1145/1538234.1538237}
+}
+
+@InProceedings{Karavirta:JSAVHeaps,
+  author = {Ville Karavirta and Ari Korhonen and Otto Sepp\"{a}l\"{a}},
+  title = {Misconceptions in Visual Algorithm Simulation Revisited: On UI's Effect on Student Performance, Attitudes, and Misconceptions},
+  booktitle = {Proceedings of Learning and Teaching in Computing and Engineering},
+  year = {2013},
+  address = {Macau}
 }
 
 @inproceedings{korhonen04,
@@ -1220,6 +1228,9 @@ number = 2269,
 @inproceedings{Karavirta:SpatialJSAV,
   author = {V. Karavirta},
   title = {Location-aware Mobile Learning Of Spatial Algorithms},
-  booktitle = {IADIS International Conference on Mobile Learning 2013},
-  year = {To Appear}
+  booktitle = {Proceedings of the IADIS International Conference on Mobile Learning 2013},
+  month = {March},
+  year = {2013},
+  address = {Lisbon, Portugal},
+  pages = {158--162}
 }
