Added slideCON.css to conf.py in configure.py so it will be included on all pages, removed explicit references to it from RST files, updated module authoring documentation, tweaked and updated comments in configure.py

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -887,7 +887,7 @@ extra = "http://www.sciencedirect.com/science/article/B75H1-4VBD6P0-D/2/d237ab35
 @misc{exe,
 author = {{eXe International}},
 title = {{eXe} - {T}he {eLearning} {XHTML} Editor}},
-note ={\url{http://www.http://exelearning.org/}},
+note ={\url{http://exelearning.org/}},
 year = 2010,
 }
 
