--- a/SourceCode/Java/Sorting/SortTime.2
+++ b/SourceCode/Java/Sorting/SortTime.2
@@ -18,6 +18,10 @@ public static void main(String args[]) throws IOException {
 
   for (int i=0; i<A.length; i++)
     A[i] = (Math.abs(value.nextInt()) % 1000) + 1;
+//  for (int i=0; i<A.length; i++)
+//    A[i] = i+1;
+//  for (int i=0; i<A.length; i++)
+//    A[i] = 200000 - i;
 
   sorttime(A);
 }
