--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1,3 +1,86 @@
+@book{russell2001,
+author={Russell, T.},
+title={The No Significant Difference Phenomenon: A Comparative Research Annotated Bibliography on Technology for Distance Education},
+edition={5th},
+publisher={{IDECC}},
+year=2001,
+url={\url{http://www.nosignificantdifference.org}},
+}
+
+@techreport{allen2011,
+author = {Allen, E. and Seaman, J.},
+title={Going the Distance: Online Education in the United States},
+institution={The Sloan Consortium}, 
+month={November},
+year= 2011,
+url={\url{http://www.onlinelearningsurvey.com/reports/goingthedistance.pdf}},
+}
+
+@inproceedings{henze2011,
+ author = {Henze, Niels and Rukzio, Enrico and Boll, Susanne},
+ title = {100,000,000 taps: analysis and improvement of touch performance in the large},
+ booktitle = {Proceedings of the 13th International Conference on Human Computer Interaction with Mobile Devices and Services},
+ series = {MobileHCI '11},
+ year = {2011},
+ isbn = {978-1-4503-0541-9},
+ location = {Stockholm, Sweden},
+ pages = {133--142},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2037373.2037395},
+ doi = {10.1145/2037373.2037395},
+ acmid = {2037395},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Android Market, app store, large-scale, mobile phone, public study, touch screen, user study},
+} 
+
+@mastersthesis{paul2013,
+author ={Paul, A.M.},
+year = 2013,
+title ={QBank: A Web-Based Dynamic Problem Authoring Tool},
+school={Virginia Tech},
+month={June},
+}
+
+@MASTERSTHESIS{breakiron2013,
+  author = {Daniel Aubrey Breakiron},
+  title = {Evaluating the Integration of Online, Interactive Tutorials into a Data Structures and Algorithms Course},
+  school = {Virginia Tech},
+  year = {2013},
+  type = {Master's Thesis}
+}
+
+@techreport{means2010,
+author = {Means, Barbara and Toyama, Yukie and Murphy, Robert and Bakia, Marianne and Jones, Karla},
+  institution = {U.S. Department of Education},
+  keywords = {department e-learning education evaluation},
+  title = {Evaluation of Evidence-Based Practices in Online Learning. A Meta-Analysis and Review of Online Learning Studies},
+  url = {\url{http://www.ed.gov/rschstat/eval/tech/evidence-based-practices/finalreport.pdf}},
+month={September},
+  year = 2010,
+}
+
+@article{bloom1984,
+author={Bloom, B.S.},
+title={The 2 Sigma Problem: The Search for Methods of Group Instruction as Effective as One-on-One Tutoring},
+journal={Educational Researcher},
+volume=13,
+number=6,
+pages={4--16},
+year=1984,
+}
+
+@article{wasfy2013,
+  author= {Wasfy, H.M. and Wasfy, T.M. and Peters, J.M. and Mahfouz, R.M.},
+  title={No Skill Left Behind: Intelligent Tutoring Systems Enable a New Paradigm in Learning},
+  journal={Computers in Education Journal},
+  volume=4,
+  number=2,
+  month = {April},
+  year=2013,
+  pages={2--10},
+}
+
 @article{Mayer02,
 author = {R.E. Mayer},
 title = {Cognitive Theory and the Design of Multimedia Instruction: An Example of the Two-Way Street Between Cognition and Instruction},
@@ -16,6 +99,28 @@ volume = 63,
 number = 8,
 year = 2008,
 pages = {760--769},
+}
+
+@article{boisvert2009visualisation,
+  title={A visualisation tool for the programming process},
+  author={Boisvert, Charles R},
+  journal={ACM SIGCSE Bulletin},
+  volume={41},
+  number={3},
+  pages={328--332},
+  year={2009},
+  publisher={ACM}
+}
+
+@article{cook1962,
+  title={The Hawthorne effect in educational research},
+  author={Cook, Desmond L},
+  journal={The Phi Delta Kappan},
+  volume={44},
+  number={3},
+  pages={116--122},
+  year={1962},
+  publisher={JSTOR}
 }
 
 @misc{RST,
@@ -167,6 +272,7 @@ author = "Colleen Kehoe and John Stasko and Ashley Taylor"
  address = {Atlanta GA},
  month = {June},
  year = 2013,
+ pages={Paper \#5951},
 }
 
 @inproceedings{Karavirta:ITiCSE13,
@@ -205,6 +311,16 @@ author = "Colleen Kehoe and John Stasko and Ashley Taylor"
   title = {Service-Oriented Approach to Improve Interoperability of e-Learning Systems},
   booktitle = {13th IEEE International Conference on Advanced Learning Technologies},
   year = {2013}
+}
+
+@article{ihantola2011,
+  url = { http://www.jite.org/documents/Vol10/JITEv10IIPp119-132Ihantola944.pdf },
+  author = { Petri Ihantola and Ville Karavirta },
+  year = { 2011 },
+  pages = { 1--14 },
+  volume = { 10 },
+  journal = { Journal of Information Technology Education: Innovations in Practice },
+  title = { Two-Dimensional Parson's Puzzles: The Concept, Tools, and First Observations },
 }
 
 @inproceedings{korhonen04,
@@ -430,6 +546,17 @@ year=2011,
 title="Enhancing student performance by promoting Self-regulated learning",
 booktitle="Proceedings of International Mechanical Engineering Congress \& Exposition",
 month="November",
+}
+
+@article{karavirta2006,
+author={Karavirta, V. and Korhonen, A. and Malmi, L.},
+title={On the use of Resubmissions in Automatic Assessment System},
+journal={Computer Science Education},
+volume=16,
+number=3,
+month=sep,
+year=2006,
+pages={229--240},
 }
 
 @inproceedings{Karavirta2005,
@@ -885,7 +1012,7 @@ Year = {2007}
 @article{NaGr:2002,
  author = {T. Naps and S. Grissom},
  title = {The Effective Use of Quicksort Visualizations in the Classroom},
- journal = {J. Comput. Small Coll.},
+ journal = {Journal of Computing Sciences in Colles},
  volume = {18},
  number = {1},
  year = {2002},
