Added entry to OpenDSA.bib

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1,3 +1,14 @@
+@article{Kaminski2008,
+author = {Kaminski, Jennifer A. and Sloutsky, Vladimir M. and Heckler, Andrew F.},
+title = {The Advantages of Abstract Examples in Learning Math},
+journal = {Science},
+volume = 320,
+month = {April},
+pages = {454--455},
+year = 2008,
+}
+
+
 @inproceedings{Levy:2008,
  author = {Levy, Ronit Ben-Bassat and Ben-Ari, Mordechai},
  title = {Perceived behavior control and its influence on the adoption of software tools},
