--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1,3 +1,22 @@
+@inproceedings{KorhonenWG13,
+ author = {Korhonen, Ari and Naps, Thomas and Boisvert, Charles and Crescenzi, Pilu and Karavirta, Ville and Mannila, Linda and Miller, Bradley and Morrison, Briana and Rodger, Susan H. and Ross, Rocky and Shaffer, Clifford A.},
+ title = {Requirements and Design Strategies for Open Source Interactive Computer Science eBooks},
+ booktitle = {Proceedings of the ITiCSE Working Group Reports Conference on Innovation and Technology in Computer Science Education-working Group Reports},
+ series = {ITiCSE -WGR '13},
+ year = {2013},
+ isbn = {978-1-4503-2665-0},
+ location = {Canterbury, England, United Kingdom},
+ pages = {53--72},
+ numpages = {20},
+ url = {http://doi.acm.org/10.1145/2543882.2543886},
+ doi = {10.1145/2543882.2543886},
+ acmid = {2543886},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {algorithm visualization, automated assessment, digital education, hypertext, interactive eBook},
+} 
+
+
 @article{Kaminski2008,
 author = {Kaminski, Jennifer A. and Sloutsky, Vladimir M. and Heckler, Andrew F.},
 title = {The Advantages of Abstract Examples in Learning Math},
