Add CS2013 curriculum report to bibliography

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -225,6 +225,16 @@ year = 2009,
   year = 2013,
 }
 
+@techreport{CS2013,
+     title = {Computer Science Curricula 2013},
+     author = {ACM/IEEE-CS Joint Task Force on Computing Curricula},
+     month = {December},
+     year = {2013},
+     institution = {ACM Press and IEEE Computer Society Press},
+     url = {http://dx.doi.org/10.1145/2534860},
+     doi = {10.1145/2534860}
+}
+
 @misc{CS2008,
   key = {Curriculum2008},
   author = {{CS2008 Review Taskforce}},
