Update OpenDSA.bib from proposal work

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1,3 +1,333 @@
+@book{Bandura,
+author = {Bandura, A.},
+year = 1986,
+title = {Social Foundations of thought and action: A social cognitive theory},
+address = {Englewood Cliffs, NJ},
+publisher = {Prentice Hall},
+}
+
+@article{Lovett,
+author = {Lovett, M.C. and Greenhouse, J.B.},
+year = 2000,
+title = {Applying cognitive theory to statistics instruction},
+journal = {The American Statistician},
+volume = 54,
+number = 3,
+pages = {196--211},
+}
+
+@inproceedings{Ernst13,
+author = {Ernst, J. and Clark, A.C. and DeLuca, V.W. and Bottomley, L.},
+title = {Professional development system design for grades 6-12 technology, engineering, and design educators},
+booktitle = {Proceedings of the American Society for Engineering Education Annual Conference and Exposition},
+location = {Atlanta, GA},
+month = jun,
+year = 2013,
+}
+
+@inproceedings{Segedin13,
+author = {Segedin, L. and Ernst, J.V and Clark, A.C.},
+title = {Transforming teaching through implementing inquiry: A national board-aligned professional development system},
+booktitle = {Proceedings of the Association for Career and Technical Education Research},
+location = {Las Vegas, NV},
+year = 2013,
+}
+
+@inproceedings{Ernst12,
+author = {Ernst, J.V.},
+title = {Authentic assessment in performance-based STEM education activities},
+booktitle = {Proceedings of the Scaling STEM: Transforming Education Matters Annual Conference},
+location = {Durham, NC},
+year = 2012,
+month = apr,
+}
+
+@inproceedings{Goodrich1998,
+ author = {Goodrich, Michael T. and Tamassia, Roberto},
+ title = {Teaching the Analysis of Algorithms with Visual Proofs},
+ booktitle = {Proceedings of the Twenty-ninth SIGCSE Technical Symposium on Computer Science Education},
+ series = {SIGCSE '98},
+ year = {1998},
+ isbn = {0-89791-994-7},
+ location = {Atlanta, Georgia, USA},
+ pages = {207--211},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/273133.274298},
+ doi = {10.1145/273133.274298},
+ acmid = {274298},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@article{Thompson2011,
+ author = {Thompson, Hussein and Chadhuri, Pranay},
+ title = {An Alternative Visual Analysis of the Build Heap Algorithm},
+ journal = {ACM Inroads},
+ issue_date = {September 2011},
+ volume = {2},
+ number = {3},
+ month = aug,
+ year = {2011},
+ issn = {2153-2184},
+ pages = {31--32},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/2003616.2003630},
+ doi = {10.1145/2003616.2003630},
+ acmid = {2003630},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {areas of rectangles, heaps, visual proof},
+} 
+
+@inproceedings{Blaheta2009,
+ author = {Blaheta, Don},
+ title = {A Visual Proof of Amortised-linear Resizable Arrays},
+ booktitle = {Proceedings of the 14th Annual ACM SIGCSE Conference on Innovation and Technology in Computer Science Education},
+ series = {ITiCSE '09},
+ year = {2009},
+ isbn = {978-1-60558-381-5},
+ location = {Paris, France},
+ pages = {338--338},
+ numpages = {1},
+ url = {http://doi.acm.org/10.1145/1562877.1562979},
+ doi = {10.1145/1562877.1562979},
+ acmid = {1562979},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {amortised analysis, visual proof},
+} 
+
+@article{Sher2008,
+ author = {Sher, David B.},
+ title = {A Visual Proof for an Average Case of List Searching},
+ journal = {SIGCSE Bull.},
+ issue_date = {June 2008},
+ volume = {40},
+ number = {2},
+ month = jun,
+ year = {2008},
+ issn = {0097-8418},
+ pages = {74--78},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/1383602.1383639},
+ doi = {10.1145/1383602.1383639},
+ acmid = {1383639},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {analysis of algorithms, computer science education, data structures},
+} 
+
+@article{Hammack2006,
+title = {Alternating series convergence: a visual proof},
+author = {Hammack, R.H. and Lyons, D.W.},
+journal = {Teaching Mathematics and its Applications},
+year = 2006,
+volume = 25,
+number = 2,
+pages = {58--60},
+}
+
+@article{Fouh14,
+title = {Design and architecture of an interactive eTextbook -- The {OpenDSA} system},
+author = {Fouh, E. and Karavirta, V. and Breakiron, D.A. and Hamouda, S. and Hall, S. and Naps, T.L. and Shaffer, C.A.},
+year = 2014,
+journal = {Science of Computer Programming},
+note = {to appear},
+}
+
+@book{RoF06,
+  title={{JFLAP} -- {A}n interactive formal languages and automata package},
+  author={Rodger, S.H. and Finley, T.W.},
+  xisbn={0763738344},
+  year={2006},
+  publisher={Jones \& Bartlett Learning}
+}
+
+@InProceedings {CDL11,
+ author = "S. Cooper and W. Dann and D. Lewis and P. Lawhead and S. Rodger  and
+M. Schep and R. Stalvey",
+ title = "A Pre-College Professional Development Program",
+ booktitle = "The 16th Annual Conference on Innovation and Technology in
+Computer Science Education (ITiCSE 2011)", 
+ pages = "188--192", 
+ year = "2011"
+}
+
+@INPROCEEDINGS{RWL09,
+  AUTHOR = {Susan H. Rodger and Eric Wiebe and Kyung Min lee and Chris Morgan and Kareem Omar and Jonathan Su}, 
+  TITLE="Increasing Engagement in Automata Theory with JFLAP",
+  BOOKTITLE = "40th SIGCSE Technical Symposium on Computer Science Education",
+  PAGES = "403--407",
+  ORGANIZATION = "SIGCSE",
+  MONTH = "March",
+  YEAR = {2009},
+}
+
+@INPROCEEDINGS{CRA12,
+      AUTHOR = "P. Crescenzi and L. Rossi and G. Apollaro", 
+      TITLE="Making Turing Machines Accessible to Blind Students",
+         BOOKTITLE = "Forty-third SIGCSE Technical Symposium on
+Computer Science Education",
+        PAGES = "167-172",
+        ORGANIZATION = "SIGCSE",
+        MONTH = "March",
+        YEAR = {2012}
+}
+
+@INPROCEEDINGS{RDG12,
+      AUTHOR = "Susan Rodger and Melissa Dalis and Chitra Gadwal and Jenna
+Hayes and Peggy Li and Liz Liang and Francine Wolfe and Wenhui Zhang",
+      TITLE="Integrating Computing into Middle Schools Disciplines Through
+Projects",
+         BOOKTITLE = "Fourty-third SIGCSE Technical Symposium on
+Computer Science Education",
+        PAGES = "421-426",
+        ORGANIZATION = "SIGCSE",
+        MONTH = "March",
+        YEAR = {2012},
+}
+
+@INPROCEEDINGS{AAF06,
+      AUTHOR = "Casey Alt and Owen Astrachan and Jeffrey Forbes and Richard
+Lucic and Susan Rodger",
+      TITLE="Social Networks Generate Interest in Computer Science",
+         BOOKTITLE = "Thirty-seventh SIGCSE Technical Symposium on
+Computer Science Education",
+        PAGES = "438-442",
+        ORGANIZATION = "SIGCSE",
+        MONTH = "March",
+        YEAR = {2006},
+}
+
+
+@INPROCEEDINGS{Nef10,
+      AUTHOR = "N. Neff",
+      TITLE="Problem-directed Discrete Structures Course",
+         BOOKTITLE = "Fourty-first SIGCSE Technical Symposium on
+Computer Science Education",
+        PAGES = "148-151",
+        ORGANIZATION = "SIGCSE",
+        MONTH = "March",
+        YEAR = {2010},
+}
+
+@INPROCEEDINGS{RQS11,
+      AUTHOR = "Susan H. Rodger and Henry Qin and Jonathan Su",
+      TITLE="Increasing the Use of JFLAP in Courses",
+         BOOKTITLE = "Sixth Program Visualization Workshop",
+        PAGES = "53-56",
+        ORGANIZATION = "PVW",
+        MONTH = "June",
+        YEAR = {2011},
+}
+ 
+@INPROCEEDINGS{RGL13,
+      AUTHOR = "Susan H. Rodger and Julian Genkins and
+      Peggy Lee and Ian McMahon",
+      TITLE="Increasing the Experimentation of Theoretical Computer Science
+with New Features in JFLAP",
+        BOOKTITLE = "The Eighteenth Annual Conference on Innovation and
+Technology in Computer Science Education",
+        PAGES = "(to appear)",
+        ORGANIZATION = "ITiCSE",
+        MONTH = "July",
+        YEAR = {2013},
+}
+
+@INPROCEEDINGS{RLR07,
+      AUTHOR = "Susan H. Rodger and Jinghui Lim and Stephen Reading",
+      TITLE="Increasing Interaction and Support in the Formal Languages and
+Automata Theory Course",
+        BOOKTITLE = "The Twelfth Annual Conference on Innovation and Technology
+in Computer Science Education",
+        PAGES = "58-62",
+        ORGANIZATION = "ITiCSE",
+        MONTH = "June",
+        YEAR = {2007},
+}
+ 
+@misc{OpenDSAsite,
+  author="OpenDSA Contributors",
+  title = "OpenDSA Project Website",
+  howpublished={\url{algoviz.org/OpenDSA}},
+  year = {2013},
+} 
+ 
+@misc{JSAVsite,
+  author="V. Karavirta",
+  title = "JSAV GitHub Repository",
+  howpublished={\url{github.com/vkaravir/JSAV}},
+  year = {2013},
+} 
+ 
+@misc{JFLAPsite,
+  author="S. H. Rodger",
+  title = "JFLAP web site",
+  howpublished={\url{www.jflap.org}},
+  year = {2013},
+  note = "[online; accessed 5-May-2013]",
+} 
+ 
+@INPROCEEDINGS{grammond1999using,
+  AUTHOR = "E. Grammond and Susan H. Rodger",
+  TITLE="Using JFLAP to Interact with Theorems in Automata Theory",
+  BOOKTITLE = "13th SIGCSE Technical Symposium on Computer Science Education",
+  PAGES = "336--340",
+  ORGANIZATION = "SIGCSE",
+  MONTH = "March",
+  YEAR = 1999,
+}
+
+@ARTICLE{CSK11,
+        author = "P. Chakraborty and  P.C. Saxena and C. P. Katti", 
+        title ="Fifty years of automata simulation: a review",
+        journal = "ACM Inroads",
+        volume = 2,
+        number = 4,
+        pages = "59-70",
+        month = "December",
+        year = "2011",
+}
+
+@BOOK{Lin11,
+        AUTHOR = "P. Linz",
+        TITLE = "An Introduction to Formal Languages and Automata, 5th
+Edition",
+        PUBLISHER = "Jones and Bartlett",
+        ADDRESS = "Sudbury, MA",
+        YEAR = "2011"   }
+@BOOK{Moz10,
+        AUTHOR = "Maxim Mozgovoy",
+        TITLE = "Algorithms, Languages, Automata, and Compilers",
+        PUBLISHER = "Jones and Bartlett",
+        ADDRESS = "Sudbury, MA",
+        YEAR = "2010",
+}
+
+@BOOK{God08,
+        AUTHOR = "Wayne Goddard",
+        TITLE = "Introducing the Theory of Computation",
+        PUBLISHER = "Jones and Bartlett",
+        ADDRESS = "Sudbury, MA",
+        YEAR = "2008",
+}
+
+@BOOK{Gop06,
+        AUTHOR = "G. L. Gopalakrishnan",
+        TITLE = "Computation Engineering: Applied Automata Theory and Logic",
+        PUBLISHER = "Springer",
+        ADDRESS = "New York, NY",
+        YEAR = "2006",
+}
+
+@BOOK{Ben06,
+        AUTHOR = "Mordechai Ben-Ari",
+        TITLE = "Principles of the Spin Model Checker",
+        PUBLISHER = "Springer",
+        ADDRESS = "London",
+        YEAR = "2006",
+}
+
 @inproceedings{KorhonenWG13,
  author = {Korhonen, Ari and Naps, Thomas and Boisvert, Charles and Crescenzi, Pilu and Karavirta, Ville and Mannila, Linda and Miller, Bradley and Morrison, Briana and Rodger, Susan H. and Ross, Rocky and Shaffer, Clifford A.},
  title = {Requirements and Design Strategies for Open Source Interactive Computer Science eBooks},
@@ -118,7 +448,7 @@ school={Virginia Tech},
 month={June},
 }
 
-@MASTERSTHESIS{breakiron2013,
+@MASTERSTHESIS{Breakiron2013,
   author = {Daniel Aubrey Breakiron},
   title = {Evaluating the Integration of Online, Interactive Tutorials into a Data Structures and Algorithms Course},
   school = {Virginia Tech},
@@ -177,6 +507,13 @@ year = 2008,
 pages = {760--769},
 }
 
+@book{Sweller1999,
+author = {J. Sweller},
+title = {Instructional Design in Technical Areas},
+year = 1999,
+publisher = {ACER Press},
+}
+
 @article{boisvert2009visualisation,
   title={A visualisation tool for the programming process},
   author={Boisvert, Charles R},
@@ -231,7 +568,8 @@ year = 2009,
      month = {December},
      year = {2013},
      institution = {ACM Press and IEEE Computer Society Press},
-     url = {http://dx.doi.org/10.1145/2534860},
+     url = {http://ai.stanford.edu/users/sahami/CS2013/final-draft/CS2013-final-report.pdf},
+     BADurl = {http://dx.doi.org/10.1145/2534860},
      doi = {10.1145/2534860}
 }
 
@@ -1480,7 +1818,7 @@ pages = {129--134},
  }
 
 @inproceedings{NapsPanelLong,
- author = {T.L. Naps and G. R\"{o}ssling and V. Almstrum and W. Dann and R. Fleischer and C. Hundhausen and A. Korhonen and L. Malmi and M. McNally and S. Rodger and J.A. Vel\'{a}zquez-Iturbide}
+ author = {T.L. Naps and G. R\"{o}ssling and V. Almstrum and W. Dann and R. Fleischer and C. Hundhausen and A. Korhonen and L. Malmi and M. McNally and S. Rodger and J.A. Vel\'{a}zquez-Iturbide},
  title = {Exploring the role of visualization and engagement in computer science education},
  booktitle = {ITiCSE-WGR '02: Working Group Reports from ITiCSE on Innovation and Technology in Computer Science Education},
  year = {2002},
