Update bib file

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1,3 +1,123 @@
+@inproceedings{saikkonen2001,
+ author = {Saikkonen, Riku and Malmi, Lauri and Korhonen, Ari},
+ title = {Fully automatic assessment of programming exercises},
+ booktitle = {Proceedings of the 6th annual conference on Innovation and technology in computer science education},
+ series = {ITiCSE '01},
+ year = {2001},
+ isbn = {1-58113-330-8},
+ location = {Canterbury, United Kingdom},
+ pages = {133--136},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/377435.377666},
+ doi = {10.1145/377435.377666},
+ acmid = {377666},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
+@inproceedings{laakso2005,
+   author              = {Mikko, Jussi, Laakso and  Tapio, Salakoski and Ari, Korhonen},
+   title               = {The Feasibility of Automatic Assessment and Feedback.},
+   booktitle           = {CELDA},
+   year                = {2005},
+   pages               = {113-122}
+}
+
+@inproceedings{stasko1993,
+ author = {Stasko, John and Badre, Albert and Lewis, Clayton},
+ title = {Do algorithm animations assist learning: an empirical study and analysis},
+ booktitle = {Proceedings of the INTERCHI'93 conference on Human factors in computing systems},
+ series = {INTERCHI '93},
+ year = {1993},
+ isbn = {90-5199-133-9},
+ location = {Amsterdam, The Netherlands},
+ pages = {61--66},
+ numpages = {6},
+ acmid = {164673},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands}
+} 
+
+@article{goldman2010,
+ author = {Goldman, Ken and Gross, Paul and Heeren, Cinda and Herman, Geoffrey L. and Kaczmarczyk, Lisa and Loui, Michael C. and Zilles, Craig},
+ title = {Setting the Scope of Concept Inventories for Introductory Computing Subjects},
+ journal = {Trans. Comput. Educ.},
+ issue_date = {June 2010},
+ volume = {10},
+ number = {2},
+ month = jun,
+ year = {2010},
+ issn = {1946-6226},
+ pages = {5:1--5:29},
+ articleno = {5},
+ numpages = {29},
+ url = {http://doi.acm.org/10.1145/1789934.1789935},
+ doi = {10.1145/1789934.1789935},
+ acmid = {1789935},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Curriculum, concept inventory, delphi, discrete math, logic design, programming fundamentals}
+} 
+
+@article{velazquez2008,
+ author = {Velazquez-Iturbide, J. Angel and Perez-Carrasco, Antonio and Urquiza-Fuentes, Jaime},
+ title = {SRec: an animation system of recursion for algorithm courses},
+ journal = {SIGCSE Bull.},
+ issue_date = {September 2008},
+ volume = {40},
+ number = {3},
+ month = jun,
+ year = {2008},
+ issn = {0097-8418},
+ pages = {225--229},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/1597849.1384332},
+ doi = {10.1145/1597849.1384332},
+ acmid = {1384332},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {activation trees, program animation, recursion, usability}
+} 
+
+@article{tung2001,
+ author = {Tung, Sho-Huan and Chang, Ching-Tao and Wong, Wing-Kwong and Jehng, Jihn-Chang},
+ title = {Visual representations for recursion},
+ journal = {Int. J. Hum.-Comput. Stud.},
+ issue_date = {March 2001},
+ volume = {54},
+ number = {3},
+ month = mar,
+ year = {2001},
+ issn = {1071-5819},
+ pages = {285--300},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1006/ijhc.2000.0433},
+ doi = {10.1006/ijhc.2000.0433},
+ acmid = {375872},
+ publisher = {Academic Press, Inc.},
+ address = {Duluth, MN, USA},
+ keywords = {Scheme, program visualization, recursion}
+} 
+
+@article{dann2001,
+ author = {Dann, Wanda and Cooper, Stephen and Pausch, Randy},
+ title = {Using visualization to teach novices recursion},
+ journal = {SIGCSE Bull.},
+ issue_date = {Sept. 2001},
+ volume = {33},
+ number = {3},
+ month = jun,
+ year = {2001},
+ issn = {0097-8418},
+ pages = {109--112},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/507758.377507},
+ doi = {10.1145/507758.377507},
+ acmid = {377507},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
 @book{Bandura,
 author = {Bandura, A.},
 year = 1986,
@@ -563,15 +683,16 @@ year = 2009,
 }
 
 @techreport{CS2013,
-     title = {Computer Science Curricula 2013},
-     author = {ACM/IEEE-CS Joint Task Force on Computing Curricula},
-     month = {December},
-     year = {2013},
-     institution = {ACM Press and IEEE Computer Society Press},
-     url = {http://ai.stanford.edu/users/sahami/CS2013/final-draft/CS2013-final-report.pdf},
-     BADurl = {http://dx.doi.org/10.1145/2534860},
-     doi = {10.1145/2534860}
+  title = {Computer Science Curricula 2013},
+  author = {ACM/IEEE-CS Joint Task Force on Computing Curricula},
+  month = {December},
+  year = {2013},
+  institution = {ACM Press and IEEE Computer Society Press},
+  url = {http://ai.stanford.edu/users/sahami/CS2013/final-draft/CS2013-final-report.pdf},
+  BADurl = {http://dx.doi.org/10.1145/2534860},
+  doi = {10.1145/2534860}
 }
+
 
 @misc{CS2008,
   key = {Curriculum2008},
