--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1,3 +1,175 @@
+
+@inproceedings{Fossati:2008:LLL:1425984.1426000,
+ author = {Fossati, Davide and Eugenio, Barbara and Brown, Christopher and Ohlsson, Stellan},
+ title = {Learning Linked Lists: Experiments with the iList System},
+ booktitle = {Proceedings of the 9th International Conference on Intelligent Tutoring Systems},
+ series = {ITS '08},
+ year = {2008},
+ isbn = {978-3-540-69130-3},
+ location = {Montreal, Canada},
+ pages = {80--89},
+ numpages = {10},
+ url = {http://dx.doi.org/10.1007/978-3-540-69132-7_13},
+ doi = {10.1007/978-3-540-69132-7_13},
+ acmid = {1426000},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
+ 
+@article{Fossati:2009:SCS:1591883.1592096,
+ author = {Fossati, Davide and Di Eugenio, Barbara and Brown, Christopher W. and Ohlsson, Stellan and Cosejo, David G. and Chen, Lin},
+ title = {Supporting Computer Science Curriculum: Exploring and Learning Linked Lists with iList},
+ journal = {IEEE Trans. Learn. Technol.},
+ issue_date = {April 2009},
+ volume = {2},
+ number = {2},
+ month = apr,
+ year = {2009},
+ issn = {1939-1382},
+ pages = {107--120},
+ numpages = {14},
+ url = {http://dx.doi.org/10.1109/TLT.2009.21},
+ doi = {10.1109/TLT.2009.21},
+ acmid = {1592096},
+ publisher = {IEEE Computer Society Press},
+ address = {Los Alamitos, CA, USA},
+ keywords = {Computer-assisted instruction, Computer-assisted instruction, computer science education, education, evaluation/methodology, constraint-based modeling, intelligent tutoring systems., computer science education, constraint-based modeling, education, evaluation/methodology, intelligent tutoring systems.},
+} 
+
+@inproceedings{Spacco:2013:TIP:2462476.2465594,
+ author = {Spacco, Jaime and Fossati, Davide and Stamper, John and Rivers, Kelly},
+ title = {Towards Improving Programming Habits to Create Better Computer Science Course Outcomes},
+ booktitle = {Proceedings of the 18th ACM Conference on Innovation and Technology in Computer Science Education},
+ series = {ITiCSE '13},
+ year = {2013},
+ isbn = {978-1-4503-2078-8},
+ location = {Canterbury, England, UK},
+ pages = {243--248},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2462476.2465594},
+ doi = {10.1145/2462476.2465594},
+ acmid = {2465594},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {computer science education, cs2, novice programmers},
+} 
+
+@inproceedings{Fossati:2011:UEC:1953163.1953352,
+ author = {Fossati, Davide and Guzdial, Mark},
+ title = {The Use of Evidence in the Change Making Process of Computer Science Educators},
+ booktitle = {Proceedings of the 42Nd ACM Technical Symposium on Computer Science Education},
+ series = {SIGCSE '11},
+ year = {2011},
+ isbn = {978-1-4503-0500-6},
+ location = {Dallas, TX, USA},
+ pages = {685--690},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1953163.1953352},
+ doi = {10.1145/1953163.1953352},
+ acmid = {1953352},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {change, decision making, evidence, teaching practice},
+} 
+
+@inproceedings{Fossati:2010:GPF:2143722.2143787,
+ author = {Fossati, Davide and Di Eugenio, Barbara and Ohlsson, Stellan and Brown, Christopher and Chen, Lin},
+ title = {Generating Proactive Feedback to Help Students Stay on Track},
+ booktitle = {Proceedings of the 10th International Conference on Intelligent Tutoring Systems - Volume Part II},
+ series = {ITS'10},
+ year = {2010},
+ isbn = {3-642-13436-X, 978-3-642-13436-4},
+ location = {Pittsburgh, PA},
+ pages = {315--317},
+ numpages = {3},
+ url = {http://dx.doi.org/10.1007/978-3-642-13437-1_56},
+ doi = {10.1007/978-3-642-13437-1_56},
+ acmid = {2143787},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {feedback, proactive interaction},
+} 
+
+@article{DiEugenio:2008:BTS:1497124.1497127,
+ author = {Di Eugenio, Barbara and Fossati, Davide and Haller, Susan and Yu, Dan and Glass, Michael},
+ title = {Be Brief, And They Shall Learn: Generating Concise Language Feedback for a Computer Tutor},
+ journal = {Int. J. Artif. Intell. Ed.},
+ issue_date = {December 2008},
+ volume = {18},
+ number = {4},
+ month = dec,
+ year = {2008},
+ issn = {1560-4292},
+ pages = {317--345},
+ numpages = {29},
+ url = {http://dl.acm.org/citation.cfm?id=1497124.1497127},
+ acmid = {1497127},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {Intelligent tutoring systems, corpus studies, feedback generation, natural language interfaces},
+} 
+
+@inproceedings{Lu:2008:SBE:1708322.1708343,
+ author = {Lu, Xin and Di Eugenio, Barbara and Ohlsson, Stellan and Fossati, Davide},
+ title = {Simple but Effective Feedback Generation to Tutor Abstract Problem Solving},
+ booktitle = {Proceedings of the Fifth International Natural Language Generation Conference},
+ series = {INLG '08},
+ year = {2008},
+ location = {Salt Fork, Ohio},
+ pages = {104--112},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=1708322.1708343},
+ acmid = {1708343},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+@inproceedings{Fossati:2008:RPF:1564154.1564162,
+ author = {Fossati, Davide},
+ title = {The Role of Positive Feedback in Intelligent Tutoring Systems},
+ booktitle = {Proceedings of the 46th Annual Meeting of the Association for Computational Linguistics on Human Language Technologies: Student Research Workshop},
+ series = {HLT-SRWS '08},
+ year = {2008},
+ location = {Columbus, Ohio},
+ pages = {31--36},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=1564154.1564162},
+ acmid = {1564162},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+@inproceedings{Chen:2011:EED:2043132.2043140,
+ author = {Chen, Lin and Di Eugenio, Barbara and Fossati, Davide and Ohlsson, Stellan and Cosejo, David},
+ title = {Exploring Effective Dialogue Act Sequences in One-on-one Computer Science Tutoring Dialogues},
+ booktitle = {Proceedings of the 6th Workshop on Innovative Use of NLP for Building Educational Applications},
+ series = {IUNLPBEA '11},
+ year = {2011},
+ isbn = {9781937284039},
+ location = {Portland, Oregon},
+ pages = {65--75},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=2043132.2043140},
+ acmid = {2043140},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+}
+
+@inproceedings{Fossati:2009:ILY:1659450.1659524,
+ author = {Fossati, Davide and Di Eugenio, Barbara and Ohlsson, Stellan and Brown, Christopher and Chen, Lin and Cosejo, David},
+ title = {I Learn from You, You Learn from Me: How to Make iList Learn from Students},
+ booktitle = {Proceedings of the 2009 Conference on Artificial Intelligence in Education: Building Learning Systems That Care: From Knowledge Representation to Affective Modelling},
+ year = {2009},
+ isbn = {978-1-60750-028-5},
+ pages = {491--498},
+ numpages = {8},
+ url = {http://dl.acm.org/citation.cfm?id=1659450.1659524},
+ acmid = {1659524},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {Feedback Generation, Knowledge Representation, Student Modeling},
+} 
+
 @inproceedings{saikkonen2001,
  author = {Saikkonen, Riku and Malmi, Lauri and Korhonen, Ari},
  title = {Fully automatic assessment of programming exercises},
