--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -419,12 +419,27 @@ number = 2,
 pages = {58--60},
 }
 
-@article{Fouh14,
+@article{Fouh14CHB,
+title = {Exploring students learning behavior with an interactive eTextbook in 
+computer science courses},
+author = {Fouh, E. and Breakiron, D.A. and Hamouda, S. and Farghally, M.F. and
+          Shaffer, C.A.},
+journal = {Computers in Human Behavior},
+volumne = 41,
+month = {December},
+year = 2014,
+pages = {478--485},
+}
+
+@article{Fouh14SCP,
 title = {Design and architecture of an interactive eTextbook -- The {OpenDSA} system},
 author = {Fouh, E. and Karavirta, V. and Breakiron, D.A. and Hamouda, S. and Hall, S. and Naps, T.L. and Shaffer, C.A.},
 year = 2014,
 journal = {Science of Computer Programming},
-note = {to appear},
+number = 1,
+volume = 88,
+month = {August},
+pages = {22--40},
 }
 
 @book{RoF06,
@@ -864,7 +879,6 @@ year = 2009,
   BADurl = {http://dx.doi.org/10.1145/2534860},
   doi = {10.1145/2534860}
 }
-
 
 @misc{CS2008,
   key = {Curriculum2008},
