Still trying to fix SAT/sat naming

--- a/Doc/OpenDSA.bib
+++ b/Doc/OpenDSA.bib
@@ -1,3 +1,69 @@
+@INPROCEEDINGS{Morris:AlgorithmCode,
+  author = {John Morris},
+  title = {Algorithm animation: using algorithm code to drive an animation},
+  booktitle = {ACE '05: Proceedings of the 7th Australasian conference on Computing
+	education},
+  year = {2005},
+  pages = {15--20},
+  address = {Darlinghurst, Australia, Australia},
+  publisher = {Australian Computer Society, Inc.},
+  isbn = {1-920682-24-4},
+  location = {Newcastle, New South Wales, Australia}
+}
+
+@inproceedings{Mornar:PseudoVis,
+ author = {Mornar, Jure and Grani\'{c}, Andrina and Mladenovi\'{c}, Sa\v{s}a},
+ title = {System for Automatic Generation of Algorithm Visualizations Based on Pseudocode Interpretation},
+ booktitle = {Proceedings of the 2014 Conference on Innovation \&\#38; Technology in Computer Science Education},
+ series = {ITiCSE '14},
+ year = {2014},
+ isbn = {978-1-4503-2833-3},
+ location = {Uppsala, Sweden},
+ pages = {27--32},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2591708.2591743},
+ doi = {10.1145/2591708.2591743},
+ acmid = {2591743},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {algorithm visualization, automatic animation generation, automatic interesting event detection, code interpretation, pseudocode},
+}
+
+@ARTICLE{Rajala:VilleJITE,
+  author = {Teemu Rajala and Mikko-Jussi Laakso and Erkki Kaila and Tapio Salakoski},
+  title = {Effectiveness of Program Visualization: A Case Study with the ViLLE
+	Tool},
+  journal = {Journal of Information Technology Education: Innovations in Practice},
+  year = {2008},
+  volume = {7},
+  pages = {15--32},
+  address = {Santa Rosa, California USA},
+  publisher = {Informing Science Institute}
+}
+
+@INPROCEEDINGS{Roessling:AnimalScript00,
+  author = {Guido R\"o\ss{}ling and Bernd Freisleben},
+  title = {Program Visualization Using \textsc{AnimalScript}},
+  booktitle = {Proceedings of the First Program Visualization Workshop},
+  year = {2000},
+  pages = {41--52},
+  address = {University of Joensuu, Finland}
+}
+
+@INPROCEEDINGS{Karavirta:ViLLEStub,
+  author = {Ville Karavirta and Riku Haavisto and Erkki Kaila and Mikko-Jussi Laakso and Teemu Rajala and Tapio Salakoski},
+  title = {Interactive Learning Content for Introductory Computer Science Course Using the ViLLE Learning Environment},
+  booktitle = {Proceedings of Learning and Teaching in Computing and Engineering},
+  year = {2015, Accepted}
+}
+
+@BOOK{diehl2007sv,
+  title = {{Software visualization: Visualizing the Structure, Behaviour, and
+	Evolution of Software}},
+  publisher = {Springer New York},
+  year = {2007},
+  author = {Diehl, S.}
+}
 
 @inproceedings{Fossati:2008:LLL:1425984.1426000,
  author = {Fossati, Davide and Eugenio, Barbara and Brown, Christopher and Ohlsson, Stellan},
@@ -638,7 +704,7 @@ Edition",
 @inproceedings{KorhonenWG13,
  author = {Korhonen, Ari and Naps, Thomas and Boisvert, Charles and Crescenzi, Pilu and Karavirta, Ville and Mannila, Linda and Miller, Bradley and Morrison, Briana and Rodger, Susan H. and Ross, Rocky and Shaffer, Clifford A.},
  title = {Requirements and Design Strategies for Open Source Interactive Computer Science eBooks},
- booktitle = {Proceedings of the ITiCSE Working Group Reports Conference on Innovation and Technology in Computer Science Education-working Group Reports},
+ booktitle = {Proceedings of the {ITiCSE} Working Group Reports Conference on Innovation and Technology in Computer Science Education-working Group Reports},
  series = {ITiCSE -WGR '13},
  year = {2013},
  isbn = {978-1-4503-2665-0},
@@ -648,8 +714,8 @@ Edition",
  url = {http://doi.acm.org/10.1145/2543882.2543886},
  doi = {10.1145/2543882.2543886},
  acmid = {2543886},
- publisher = {ACM},
- address = {New York, NY, USA},
+ Xpublisher = {ACM},
+ Xaddress = {New York, NY, USA},
  keywords = {algorithm visualization, automated assessment, digital education, hypertext, interactive eBook},
 } 
 
@@ -1122,7 +1188,7 @@ month = {Oct-Dec},
   publisher = {Elsevier Ltd.}
 }
 
-@inproceedings{AnimalScript,
+@inproceedings{Roessling:AnimalScript01,
  author = {R{\"o}{\ss}ling, Guido and Freisleben, Bernd},
  title = {{AnimalScript}: an extensible scripting language for algorithm animation},
  booktitle = {Proceedings of the thirty-second SIGCSE technical symposium on Computer Science Education},
