--- a/AV/PL/interpreters/lambdacalc/slideshows/README
+++ b/AV/PL/interpreters/lambdacalc/slideshows/README
@@ -1,8 +1,14 @@
 To create a slide show for the reduction of the expression: 3+4
 type, in this directory:
 
-source create_slideshow.sh "3+4"
+./create_slideshow.sh "3+4" a "add3to4"
 
-This command will create a slideshow stored in:
+This command will create a slideshow for the applicative order reduction
+of the lambda expression equivalent to "3+4" and will store the slide
+show in:
 
-./AV/slideshow_3+4.html
+./AV/add3to4.html
+
+For a normal order reduction of the same lambda expression, type:
+
+./create_slideshow.sh "3+4" n "add3to4_normal"
