Added version 1.05 of the SLang interpreter, namely the solution to the in-class demo on slide 20-1

--- a/AV/PL/interpreters/README
+++ b/AV/PL/interpreters/README
@@ -16,3 +16,4 @@ Interpreter versions:
           [Spring 2015] This is the version called SLang 1 that was 
           described In slide sets number 17 through 20 and that was the 
           starting point for A5.
+     1.05 version 1.04 plus changes to the language described on slide 20-1
