--- a/AV/PL/interpreters/README
+++ b/AV/PL/interpreters/README
@@ -18,3 +18,4 @@ Interpreter versions:
           starting point for A5.
      1.05 version 1.04 plus changes to the language described on slide 20-2
      1.06 version 1.04 plus let block
+     1.07 version 1.04 plus the solution to Assignment 5
